--- a/app/globals.css
+++ b/app/globals.css
@@ -2,9 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --foreground-rgb: 0, 0, 0;
+  --background-start-rgb: 214, 219, 220;
+  --background-end-rgb: 255, 255, 255;
+}
 
+@media (prefers-color-scheme: dark) {
+  :root {
+    --foreground-rgb: 255, 255, 255;
+    --background-start-rgb: 0, 0, 0;
+    --background-end-rgb: 0, 0, 0;
+  }
+}
 
 body {
-  @apply bg-gray-950;
-  color: white;
+  background: rgb(48,28,65);
+  background: linear-gradient(90deg, rgba(48,28,65,1) 33%, rgba(48,28,64,1) 100%); 
 }
